# ZenScroll

./: .gitignore  AGENTS.md  Cargo.toml  README.md
gpui-demo/: Cargo.toml
gpui-demo/src/: main.rs
native-win32/: README.md  ZenScroll.c  app.manifest  app.rc
zen-scroll-core/: Cargo.toml
zen-scroll-core/src/: lib.rs  physics.rs  plugin.rs  scroll.rs
zen-scroll-core/src/plugins/: infinite_scroll.rs  mod.rs  pull_to_refresh.rs  scrollbar.rs  snap.rs
zen-scroll-daemon/: Cargo.toml
zen-scroll-daemon/src/: config.rs  detect.rs  hook.rs  log.rs  main.rs  profile.rs  smoother.rs  tray.rs
zen-scroll-ui/: Cargo.toml  build.rs
zen-scroll-ui/assets/: app.rc
zen-scroll-ui/src/: config.rs  hook.rs  main.rs  tray.rs
