[package]
name = "zen-scroll-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-scroll-core = { path = "../zen-scroll-core" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[build-dependencies]
embed-resource = "2"

